# LexUtils

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.org  calculate_complexity_and_estimated_cost.sh  config.py  config_example.py  convert_historical_ads.py  convert_historical_ads_to_pandas.py  convert_riksdagen_txt_to_pandas.py  lex_utils.py  lexeme_staitstics.py  lexutils.py  main.py  msgfmt.sh  pyproject.toml  requirements.txt  source_files
.github/workflows/: lint_python.yml
diagrams/: classes.puml  sequence.puml
lexutils/: __init__.py  config.example.py  config.py  constants.py  enums.py  exceptions.py  main.py  usage_example_session.py
lexutils/config/: config.example.py  enums.py
lexutils/disabled/: europarl.py
lexutils/helpers/: caching.py  console.py  convert_historical_ads_to_pandas.py  convert_riksdagen_txt_to_pandas.py  download_data.py  handle_pickles.py  json_cache.py  tui.py  util.py  wdqs.py
lexutils/models/: api_usage_examples.py  arbetsformedlingen.py  dataframe_usage_examples.py  example.py  historical_job_ads.py  historical_job_ads_record.py  historical_job_ads_usage_examples.py  lexeme_staitstics.py  lexemes.py  record.py  riksdagen.py  riksdagen_record.py  usage_example.py  (+6 more)
locales/: base.pot
modules/: download_data.py  europarl.py  ksamsok.py  loglevel.py  riksdagen.py  util.py
tests/: test_dataframe_usage_examples.py  test_historical_job_ads_usage_examples.py  test_lexemes.py  test_lexutils_form.py  test_lexutils_lexeme.py  test_lexutils_sense.py  test_record.py  test_riksdagen_usage_examples.py  test_usage_example.py
(+36 files in other folders)
